# mvte

./: mvte.cabal
src/Minitel/MVTE/: CharDesign.hs  G0.hs  MVTE.hs
trial/: feep.pgm  g0.pbm
