name:                mvte
version:             0.1.0.0
synopsis:            Minitel VideoTex Emulator
description:         Minitel VideoTex Emulator
homepage:            https://github.com/zigazou/mvte#readme
license:             GPL-2
license-file:        LICENSE
author:              Frédéric BISSON
maintainer:          zigazou@free.fr
copyright:           2016 Frédéric BISSON
category:            Terminal
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Minitel.MVTE.MVTE
                       Minitel.MVTE.CharDesign
                       Minitel.MVTE.G0
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , split
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-patterns
                       -fwarn-incomplete-uni-patterns
                       -fno-warn-unused-do-bind

test-suite mvte-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mvte
                     , vector
                     , split
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zigazou/mvte
